# RollAndPlay

./: .gitmodules  CMakeLists.txt  conanfile.txt  config.json  paths.json  style.json  theme.json
libs/graphicLib/: .clang-format  CMakeLists.txt  conanfile.txt
libs/graphicLib/headers/GraphicLib/: GlagGlfw.hpp  Object.hpp  PickableTexture.hpp  Text.hpp  TextRender.hpp
libs/graphicLib/headers/GraphicLib/Buffers/: Fbo.hpp  RaiiBuffer.hpp  Vao.hpp  Vertex.hpp
libs/graphicLib/headers/GraphicLib/Primitives/: AbstractPrimitive.hpp  Primitive.hpp  Rectangle.hpp
libs/graphicLib/headers/GraphicLib/Shaders/: ShaderProgram.hpp
libs/graphicLib/headers/GraphicLib/Techniques/: ColorTechnique.hpp  PickTechnique.hpp  Technique.hpp  TechniqueName.hpp  TextTechnique.hpp  TextureTechnique.hpp  TransformTechnique.hpp
libs/graphicLib/headers/GraphicLib/Textures/: Loader.hpp  Texture.hpp
libs/graphicLib/libs/: stb_image.cpp
libs/graphicLib/src/: EntryPoint.hpp  Object.cpp  PickableTexture.cpp  PickableTexture.hpp  Text.cpp  Text.hpp  TextRender.cpp
libs/graphicLib/src/buffers/: Ebo.cpp  Ebo.hpp  Fbo.cpp  RaiiBuffer.cpp  RaiiBuffer.hpp  Vao.cpp  Vao.hpp  Vbo.cpp  Vbo.hpp  VboT.cpp  Vertex.cpp
libs/graphicLib/src/primitives/: Primitive.cpp  Primitive.hpp  Rectangle.cpp  Rectangle.hpp
libs/graphicLib/src/shaders/: ShaderProgram.cpp  ShaderProgram.hpp
libs/graphicLib/src/techniques/: ColorTechnique.cpp  PickTechnique.cpp  Technique.cpp  TextTechnique.cpp  TextureTechnique.cpp  TracingTechnique.cpp  TracingTechnique.hpp  TransformTechnique.cpp
libs/graphicLib/src/textures/: Loader.cpp  Texture.cpp
rsrc/shaders/: gui.frag  gui.vert  select.frag  text2d.frag  text2d.vert  texture_gui.frag  texture_gui.vert
src/: GLController.hpp  GLWindow.cpp  GLWindow.h  GLWindow.hpp  Gui.cpp  Gui.hpp  MainController.cpp  MainController.hpp  MainWindow.cpp  MainWindow.hpp  MenuBar.cpp  MenuBar.hpp  Picking.cpp  Picking.hpp  Toolbar.cpp  Toolbar.hpp  View.cpp  View.hpp  ViewDrawer.cpp  ViewDrawer.hpp  ViewWindow.cpp  ViewWindow.hpp  main.cpp
src/config/: Config.cpp  Config.hpp  File.cpp  File.hpp  JsonParser.hpp  Parser.cpp  Parser.hpp
src/controllers/: Button.cpp  ButtonController.cpp  ButtonController.hpp  CommonController.cpp  CommonController.hpp  FormController.hpp  FormControllerFactory.cpp  FormControllerFactory.hpp  GLController.hpp  GuiController.cpp  GuiController.hpp  ImageButtonController.cpp  ImageButtonController.hpp  InputFieldContoller.cpp  InputFieldController.hpp  LayoutController.cpp  LayoutController.hpp  MenuBarController.cpp  MenuBarController.hpp  PageController.cpp  PageController.hpp  TextFormContoller.cpp  TextFormController.hpp  TextInputContoller.cpp  TextInputFieldController.hpp  WidgetController.hpp  WidgetControllerFactory.cpp  WidgetControllerFactory.hpp
src/data/: AData.hpp  Action.cpp  Action.h  Action.hpp  BaseData.cpp  BaseData.hpp  CharacterClass.cpp  CharacterClass.h  CharacterClass.hpp  Characteristic.cpp  Characteristic.hpp  Constants.hpp  DataFactory.cpp  DataFactory.hpp  DataStorage.cpp  DataStorage.hpp  IBitwiseSerializable.hpp  IJsonSerializable.hpp  ISerializable.hpp  Item.cpp  Item.hpp  ItemType.cpp  ItemType.hpp  Race.cpp  Race.h  Race.hpp  Skill.cpp  Skill.h  Skill.hpp  SkillCategory.cpp  SkillCategory.hpp  SkillLevel.h  SkillLevel.hpp  System.cpp  System.hpp  Type.hpp  User.cpp  User.hpp
src/data/convert/: Convert.cpp  Convert.hpp
src/data/graphic/: Model.cpp  Model.h  Model.hpp
src/data/storage/: StreamReader.cpp  StreamReader.hpp  StreamWriter.cpp  StreamWriter.hpp
src/forms/: Button.cpp  Button.hpp  Carriage.cpp  Carriage.hpp  Color.cpp  Color.hpp  Form.cpp  Form.hpp  FormType.hpp  ImageButton.cpp  ImageButton.hpp  InputField.cpp  InputField.hpp  Page.hpp  Selectable.cpp  Selectable.hpp  SelectableForm.cpp  SelectableForm.hpp  Text.hpp  TextBox.cpp  TextBox.hpp  TextForm.hpp
src/graphic/: AbstractPrimitive.hpp  Object.cpp  Object.hpp  Primitive.cpp  Primitive.hpp  Rectangle.cpp  Rectangle.hpp
src/graphic/buffers/: Ebo.cpp  Ebo.hpp  Fbo.cpp  Fbo.hpp  RaiiBuffer.cpp  RaiiBuffer.hpp  Vao.cpp  Vao.hpp  Vbo.cpp  Vbo.hpp  VboT.cpp  Vertex.cpp  Vertex.hpp
src/graphic/shaders/: ShaderProgram.cpp  ShaderProgram.hpp
src/graphic/techniques/: ColorTechnique.cpp  ColorTechnique.hpp  PickTechnique.cpp  PickTechnique.hpp  Technique.cpp  Technique.hpp  TechniqueName.hpp  TextTechnique.cpp  TextTechnique.hpp  TransformTechnique.cpp  TransformTechnique.hpp
src/graphic/textures/: Loader.cpp  Loader.hpp  Texture.cpp  Texture.hpp
src/logger/: Logger.hpp
src/net/: ApiClient.cpp  ApiClient.hpp  HttpMethods.hpp  HttpRequest.cpp  HttpRequest.hpp  HttpResponse.cpp  HttpResponse.hpp  HttpSession.cpp  HttpSession.hpp  Route.cpp  Route.hpp
src/pages/: APage.hpp  ActionPage.cpp  ActionPage.hpp  Anchors.hpp  BasePage.cpp  BasePage.hpp  CharacteristicPage.cpp  CharacteristicPage.hpp  Common.hpp  Constants.hpp  ItemPage.cpp  ItemPage.hpp  LoginPage.cpp  LoginPage.hpp  NetConfig.hpp  Page.hpp  PageStyleParser.cpp  PageStyleParser.hpp  RacePage.cpp  RacePage.hpp  RegistrationPage.cpp  RegistrationPage.hpp  SkillPage.cpp  SkillPage.hpp  SystemPage.cpp  SystemPage.hpp  SystemStartPage.cpp  SystemStartPage.hpp  SystemViewPage.cpp  SystemViewPage.hpp
src/pages/style/: Color.cpp  Color.hpp  Constants.hpp
src/pages/threads/: Worker.cpp  Worker.hpp
src/view/: AbstractPrimitive.hpp  Primitive.cpp  Primitive.hpp  Rectangle.cpp  Rectangle.hpp
src/view/buffers/: Ebo.cpp  Ebo.hpp  RaiiBuffer.cpp  (+8 more)
src/widgets/: Button.cpp  Button.hpp  Carriage.cpp  Carriage.hpp  Color.cpp  Color.hpp  HorizontalLayout.cpp  HorizontalLayout.hpp  ImageBox.cpp  ImageBox.hpp  ImageButton.cpp  ImageButton.hpp  Layout.cpp  Layout.hpp  LayoutType.hpp  MenuBar.cpp  MenuBar.hpp  NumericInputField.cpp  NumericInputField.hpp  TextBox.cpp  TextBox.hpp  TextData.hpp  TextForm.cpp  TextForm.hpp  TextInputField.cpp  TextInputField.hpp  VerticalLayout.cpp  VerticalLayout.hpp  Widget.cpp  Widget.hpp  WidgetBuilder.cpp  WidgetBuilder.hpp  WidgetFactory.cpp  WidgetFactory.hpp  WidgetType.hpp
(+15 files in other folders)
